fix: Authorization 헤더 삭제